--- a/package.json
+++ b/package.json
@@ -27,5 +27,5 @@
     "gh-pages": "^6.0.0",
     "vite": "^4.4.5"
   },
-  "homepage": "https://dev-j0.github.io/CV-application/"
+  "homepage": ""
 }
