--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "cv",
-  "private": "true",
+  "private": true,
   "version": "0.0.0",
   "type": "module",
-  "scripts": {
+ "scripts": {
     "dev": "vite",
     "predeploy": "npm run build",
     "deploy": "gh-pages -d dist",
